Added function for update e delete, update dont working
