# api/swagger/swagger.yaml
@@ -75,6 +75,50 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+    put:
+      description: Read an User in database
+      operationId: updateUser
+      parameters:
+        - name: userId
+          in: path
+          description: The user id
+          required: true
+          type: string
+        - name: user
+          in: body
+          description: The user object used to update db data
+          required: true
+          schema:
+            $ref: "#/definitions/UpdateUserRequest"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/ShowUserResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      description: Delete an User in database
+      operationId: deleteUser
+      parameters:
+        - name: userId
+          in: path
+          description: The user id
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /hello:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
@@ -120,6 +164,14 @@ definitions:
       userId:
         type: string
       createdAt:
+        type: string
+  UpdateUserRequest:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      password:
         type: string
   CreateUserRequest:
     required:
